# ReasonFlow

./: .gitignore  AdvanceExample.md  INSTALL.md  MANIFEST.in  README.md  build.py  environment.yml  install.bat  install.sh  prompts.md  pyproject.toml  requirements.txt  setup.py  task_logs.json
docs/: tracking.md
example/: 1_example.py  2_tracking_example.py  DataRetrievalAgent_example.py  WorkflowBuilder_for_Modular_Workflow_Creation.py  Workflow_engine_with_custom_task_agent.py  all_in_one_example.py  python_sdk_example.py  test_search.py  workflow_full_example.py
reasonflow/: __init__.py
scripts/: publish.py
tests/: test_agents.py  test_integrations.py  test_persistence.py  test_workflow_builder.py  test_workflow_engine.py
workflow_states/: .json  03e2bff4-6aa5-4f80-8461-be133f313ba7.json  04ab382e-af96-4df0-8104-5b93ae90f34d.json  06f5e8c7-d724-44d7-9cca-1f78423a6c5b.json  07a4f760-e414-4e62-8997-9c85eea9183f.json  0bfecfc8-2e3a-4cd0-9bff-e7a3a2f30c37.json  0c3803a6-8b88-4a5f-b032-8ba012f2e3f7.json  0d85b4f6-3363-4a83-878b-9bba0a763687.json  0ed44415-4d75-4396-a764-eff8c4571970.json  1288ec3f-155b-4429-b103-b9895b5ba82a.json  14cbf821-356f-4432-9c17-20c611a91453.json  192af048-fe84-4c7b-9b19-f8d0c57f1229.json  2510e543-6d44-4a22-8efc-5c20a5f675c5.json  27ef7d04-6ec2-4297-9ce7-e8e7a77cb0ff.json  2acd26df-5661-4290-ad23-6667f01789ac.json  2b7fa5ef-3ce4-412a-abbc-1e4a53cd26b7.json  30fff799-8eae-4251-a06d-0c57ba504a9d.json  311583be-0248-458e-826c-d37e3587ce7e.json  3aaf9325-975b-4d9a-9904-2d26011c51f6.json  3b785595-0e42-4e41-a88d-f9757d81d076.json  (+60 more)
(+34 files in other folders)
