[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reasonflow"
version = "0.1.0"
description = "A workflow orchestration framework for LLM applications"
readme = "README.md"
authors = [{ name = "Baljindersingh Bedi", email = "baljinder@reasonchain.ai" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["llm", "workflow", "orchestration", "rag", "agents"]
requires-python = ">=3.8" 